# tests-unitaires-python

./: .gitignore  main.py  pyproject.toml
.github/workflows/: python-app.yml
src/: Article.py  Categorie.py  Coupon.py  Panier.py  __init__.py
tests/: test_article.py
