[tool.poetry]
name = "tp"
version = "0.1.0"
description = ""
authors = ["mccreemainwoody <metz.clement@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.4"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
